﻿- Update generation of blank config files


Version 0.9.4.4 -

- Lane highlighting now follows same modifier key rules as prop/tree highlighting
- Fix preview updates not triggering when slider values are out-of-range
- Fix network 'add prop' button not updating state on selected lange change
- Fix added netowrk props sometimes rotating 180 degrees on load in some networks


Version 0.9.4.3 -

- Implement customizable repeat distances for added network props
- Sliders now correctly display out-of-range values


Version 0.9.4.2 -

- Fix map tree replacement sometimes displaying prop lists


Version 0.9.4.1 -

- Fix exception when loading replacement config file with conflicting added prop references


Version 0.9.4 -

- Major new feature: add props to network prefabs
- Add lane selection when using individual replacement mode on networks
- Options panel now automatically refreshes on language change
- Return hotkey handling to UUI


Version 0.9.3.1 -

- Fix NullReferenceException with added prop detection for buildings with no intial props


Version 0.9.3 -

- Major new feature: add props to building prefabs
- Add hotkey to toggle disabling of vanilla tree tool
- Ensure 'copy current configuration' button is disabled when not in-game


Version 0.9.2 -

- New feature: option to disable vanilla tree tool network tree replacement (no more snapping to networks)


Version 0.9.1 -

- New feature: combined prop/tree mode - replace props (in buildings or networks) with trees, or vice-versa
- The spacing of repeated network trees/props can now be adjusted (individual mode only)
- BOB tool now recognises the underground (PageDown/PageUp to switch)
- Effect renders now updated on prop/tree change (lights can now be added/removed in-game)
- Prop/tree position highlighting is dimmed when shift is pressed and disabled while Alt is pressed
- Random prop list now refreshes if displayed when random prop setup panel is closed